packages/typ/tests/fixtures/diagnostics/0935_gadt_packed_branch_result_mismatch_08.ml.expected
File "0935_gadt_packed_branch_result_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0935_gadt_packed_branch_result_mismatch_08 is not a valid module name.

File "0935_gadt_packed_branch_result_mismatch_08.ml", line 9, characters 33-34:
9 |   | Pack_theta (Bool_theta b) -> b
                                     ^
Error: The value b has type bool but an expression was expected of type int
